<resources>
    <string name="app_name">DockThor</string>
    <string name="hello_blank_fragment">Favorite station</string>
    <string name="switch_fav_station">Pick new favorite station</string>
    <string name="add_station_button">Replace favorite station</string>
    <string name="search_station_hint">Input address</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="partialStationStatusImageText">IMAGE</string>
    <string name="partialStationStatusText">Number</string>
    <string name="updateTimeAndAddress">TextView</string>
    <string name="bikeimage">bikeImage</string>
    <string name="electricbikeimage">electricBikeImage</string>
    <string name="parkingimage">parkingImage</string>
    <string name="content_description_delete">delete</string>
    <string name="delete">delete</string>
    <string name="addFavStation">submit</string>
    <string name="s_letter">S</string>
    <string name="w_letter">W</string>
    <string name="t_letter">T</string>
    <string name="f_letter">F</string>
    <string name="m_letter">M</string>
    <string name="startTimeDefault">08:00</string>
    <string name="endTimeDefault">9:45</string>
    <string name="bike_factor">0.5</string>
    <string name="min_to_replace">2</string>
    <string name="clickForDirection">For direction</string>
    <string name="setFavorite">Set favorite</string>
    <string name="cant_load_station">"Can't load station suggestions. Got error:[%1$s]"</string>
    <string name="editFavoriteName">edit favorite</string>
    <string name="favorite_nickname">nickname</string>
</resources>